# Adobe-InterIIT-TechMeet-14.0

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
hertzmark/: augment.py  dataset.py  detect_inference.py  environment.yaml  train.py
lama-inpainting/: environment.yaml  pipe_download.py  server_v1.py
lightshift_remove/: models.py  relight.py  requirements.txt  shading.py
mood_lens/: .dockerignore  Dockerfile  caption.ipynb  compute_profile.py  config.py  download_dataset.py  engine_core.py  environment.yaml  lut_generator.py  lut_model.py  main.py  requirements.txt  server.py  vsearch.py
pipeline_colour_correction/: README.md  config.py  dataset.py  lut_generator.py  main.py  requirements.txt  vsearch.py
pipeline_relighting/: Dockerfile  compute_profile.py  config.py  main.py  normal_utils.py  run_local.py  server.py
pipelines/: blip_caption.py  depth.py  detection.py  generation.py  hse_emotion.py  inpainting.py  matting.py  object_detection.py  pose.py  pose_estimation.py  rearranging.py  rearranging2.py  rearranging3.py  rearranging4.py  rearranging5.py  segmentation.py  test_pipelines.py  utils.py  view_synth.py  view_synth2.py  view_synth3.py
pipelines/relighting-pipeline-v1/: Dockerfile  README.md  pyproject.toml
pipelines/relighting-pipeline-v1/app/: requirements.txt
pipelines/relighting-pipeline-v1/app/utils/: image_io.py
pipelines/relighting-pipeline-v1/tmp/: depth-anything-relight.py  inpainting-test.py  marigold-relight.py  relight_midas.py
tap-to-mask/: requirements.txt  sam2-tiny.py
text_ctrl/: compute_profile.py  (+2 more)
(+46 files in other folders)
